tests/vertical-slice/reject/string_embedded_nul.hew
fn main() {
    let s = "a\0b";
    println(s);
}
